Fixed the alignment and changed the boolean type widget,

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/components/collapseAndExpandGroups.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/components/collapseAndExpandGroups.scss
@@ -56,6 +56,5 @@
 .digit-toggling-wrapper {
   flex: 1;
   transition: 0.2s ease-in-out;
-  padding: 0 1rem;
   box-sizing: border-box;
 }
